<resources>
    <string name="app_name">Smart Warning System</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_review">Review</string>
    <string name="send_button_label">Send</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_link_to_register">Not a member? SignUp now!</string>
    <string name="btn_link_to_login">Already registered. Sign me in!</string>
    <string name="btn_sign_out">Sign Out</string>
</resources>
